--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -654,17 +654,15 @@
 
   .form__progress .form__block:nth-of-type(1) {
     order: 1;
-    //margin-right: 57px;
+    margin-left: -10px;
   }
 
   .form__progress .form__block:nth-of-type(3) {
     order: 2;
-    //margin-right: 55px;
   }
 
   .form__progress .form__block:nth-of-type(5) {
     order: 3;
-    //margin-right: 0;
   }
 
   .form__progress .form__block:nth-of-type(2) {
@@ -675,12 +673,10 @@
 
   .form__progress .form__block:nth-of-type(4) {
     order: 5;
-    //margin-right: 65px;
   }
 
   .form__progress .form__block:nth-of-type(6) {
     order: 6;
-    //margin-right: 0;
   }
 
   .form__post {
