--- a/source/less/blocks/icon-list.less
+++ b/source/less/blocks/icon-list.less
@@ -21,20 +21,20 @@
   height: 56px;
 }
 
-.icon-list--ios {
+.icon-list__item--ios {
   width: 47px;
   height: 56px;
   background: url("../img/logo-apple.svg") no-repeat 50% 50%;
 }
 
-.icon-list--android {
+.icon-list__item--android {
   width: 47px;
   height: 56px;
   margin-top: 3px;
   background: url("../img/logo-android.svg") no-repeat 50% 50%;
 }
 
-.icon-list--windows {
+.icon-list__item--windows {
   width: 47px;
   height: 56px;
   margin-top: 4px;
