--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -166,6 +166,8 @@
     &:nth-of-type(2) {
       width: 456px;
       line-height: 60px;
+      padding-left: 0;
+      padding-right: 0;
     }
   }
 
