--- a/source/less/blocks/gallery__title.less
+++ b/source/less/blocks/gallery__title.less
@@ -29,7 +29,7 @@
     margin-bottom: 92px;
     background-image: url("../img/bg-back-tablet@1x.jpg");
     background-repeat: no-repeat;
-    background-position: -268px 4px;
+    background-position: 50% 4px;
     background-size: 1200px auto;
 
     @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
@@ -51,7 +51,7 @@
     margin-top: -3px;
     background-image: url("../img/bg-back-desktop@1x.jpg");
     background-repeat: no-repeat;
-    background-position: -798px 2px;
+    background-position: 50% 2px;
     background-size: 2560px auto;
 
     @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
