--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -14,6 +14,21 @@
   margin-bottom: 35px;
 }
 
+.page-footer__logo path {
+  //fill: #d22856;
+}
+
+.page-footer__logo:hover[href] path,
+.page-footer__logo:focus[href] path {
+  fill: #d22856;
+  cursor: pointer;
+}
+
+.page-footer__logo:active[href] path {
+  //fill: #283645;
+  opacity: 0.3;
+}
+
 .page-footer__logo-tablet {
   display: block;
 }
@@ -36,21 +51,6 @@
   .page-footer__logo {
     width: 150px;
     margin-right: 73px;
-  }
-
-  .page-footer__logo path {
-    fill: #283645;
-  }
-
-  .page-footer__logo:hover[href] path,
-  .page-footer__logo:focus[href] path {
-    fill: #d22856;
-    cursor: pointer;
-  }
-
-  .page-footer__logo:active[href] path {
-    fill: #283645;
-    opacity: 0.3;
   }
 
   .page-footer__logo-tablet {
