--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -174,10 +174,10 @@
   .advantages__list {
     display: flex;
     justify-content: flex-start;
-    width: 930px;
-    margin: 0;
+    width: 884px;
+    margin: 0 auto;
     padding-top: 402px;
-    padding-left: 30px;
+    padding-left: 0;
   }
 
   .advantages__item {
