--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,5 +1,5 @@
 
-@import "blocks/normalize.less";
+@import "normalize.less";
 @import "blocks/mixins.less";
 @import "scaffolding.less";
 @import "blocks/container.less";
