--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -14,18 +14,13 @@
   margin-bottom: 35px;
 }
 
-.page-footer__logo path {
-  //fill: #d22856;
-}
-
-.page-footer__logo:hover[href] path,
-.page-footer__logo:focus[href] path {
+.page-footer__logo:hover[href]:not(:active) path,
+.page-footer__logo:focus[href]:not(:active) path {
   fill: #d22856;
   cursor: pointer;
 }
 
 .page-footer__logo:active[href] path {
-  //fill: #283645;
   opacity: 0.3;
 }
 
