--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -20,9 +20,81 @@
   background-color: #283645;
 }
 
+.page-header__logo {
+  display: block;
+  min-height: 63px;
+  width: 100px;
+}
+
+.page-header__logo svg {
+  width: 95px;
+  height: 43px;
+  padding-top: 20px;
+  padding-left: 20px;
+  fill: #ffffff;
+}
+
+.page-header__logo:hover svg {
+  fill: #d22856;
+}
+
+.page-header__logo:active svg {
+  fill: #ffffff;
+  opacity: 0.3;
+}
+
+.page-header__logo-tablet {
+  display: none;
+}
+
+.page-header__logo-desktop {
+  display: none;
+}
+
+.page-header__logo-image {
+  width: 75px;
+  height: 23px;
+  padding-top: 20px;
+  padding-left: 20px;
+  box-sizing: content-box;
+}
+
 @media (min-width: 660px) {
   .page-header__wrapper {
     padding: 0;
+  }
+
+  .page-header__logo {
+    width: 170px;
+    min-height: 109px;
+    padding-top: 24px;
+    padding-left: 20px;
+  }
+
+  .page-header__logo svg {
+    width: 147px;
+    height: 43px;
+    padding-top: 0;
+    padding-left: 0;
+  }
+
+  .page-header__logo-mobile {
+    display: none;
+  }
+
+  .page-header__logo-tablet {
+    display: block;
+  }
+
+  .page-header__logo-desktop {
+    display: none;
+  }
+
+  .page-header__logo-image {
+    width: 147px;
+    height: auto;
+    padding-top: 2px;
+    padding-left: 2px;
   }
 }
 
@@ -49,72 +121,25 @@
   .page-header--nojs {
     background-color: rgba(0, 0, 0, 0.3);
   }
-}
 
-.page-header__logo {
-  display: block;
-  min-height: 63px;
-}
-
-.page-header__logo svg {
-  fill: #ffffff;
-}
-
-.page-header__logo:hover svg {
-  fill: #d22856;
-}
-
-.page-header__logo:active svg {
-  fill: #ffffff;
-  opacity: 0.3;
-}
-
-@media (min-width: 320px) {
-  .page-header__logo {
-    width: 100px;
-  }
-}
-
-@media (min-width: 660px) {
-  .page-header__logo {
-    width: 170px;
-    min-height: 109px;
-    padding-top: 24px;
-    padding-left: 20px;
-  }
-}
-
-@media (min-width: 960px) {
   .page-header__logo {
     padding-left: 0;
     padding-top: 0;
     min-height: 85px;
   }
-}
 
-.page-header__logo-image {
-  width: 75px;
-  height: 23px;
-  padding-top: 20px;
-  padding-left: 20px;
-}
-
-@media (min-width: 320px) {
-  .page-header__logo-image {
-    box-sizing: content-box;
+  .page-header__logo-mobile {
+    display: none;
   }
-}
 
-@media (min-width: 660px) {
-  .page-header__logo-image {
-    width: 147px;
-    height: auto;
-    padding-top: 2px;
-    padding-left: 2px;
+  .page-header__logo-tablet {
+    display: none;
   }
-}
 
-@media (min-width: 960px) {
+  .page-header__logo-desktop {
+    display: block;
+  }
+
   .page-header__logo-image {
     width: 147px;
   }
