--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -427,8 +427,8 @@
     margin-top: 56px;
     margin-bottom: 56px;
     border: 2px solid #e6e6e6;
-    display: flex;
-    flex-grow: 1;
+    //display: flex;
+    //flex-grow: 1;
     padding: 0;
     padding-top: 22px;
     padding-bottom: 2px;
@@ -606,6 +606,7 @@
   }
 
   .form__user-contact {
+    width: 940px;
     margin: 0;
     margin-bottom: 57px;
     padding: 0;
