--- a/source/less/blocks/panorama.less
+++ b/source/less/blocks/panorama.less
@@ -26,7 +26,7 @@
 .panorama__foto img {
   display: block;
   width: 100%;
-  height: auto;
+  height: 137px;
 }
 
 .panorama__wrapper {
@@ -121,8 +121,7 @@
   }
 
   .panorama__foto img {
-    width: 100%;
-    height: auto;
+    height: 509px;
   }
 
   .panorama__wrapper {
@@ -169,6 +168,10 @@
   .panorama__title {
     top: 53px;
     right: 10px;
+  }
+
+  .panorama__foto img {
+    height: 506px;
   }
 
   .panorama__wrapper {
