--- a/source/less/blocks/popup.less
+++ b/source/less/blocks/popup.less
@@ -51,9 +51,9 @@
 .popup--show {
   display: block;
   position: fixed;
-  top: 50px;
+  top: 50%;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translate(-50%, 50%);
 }
 
 @media (min-width: 660px) {
