Добавляет градиент и заголовки

--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -613,6 +613,10 @@
     padding-top: 18px;
   }
 
+  .form__user-contact .form__name {
+    margin: 0 auto;
+  }
+
   .form__user-contact label::after {
     right: 2px;
   }
@@ -637,6 +641,10 @@
     width: 940px;
     margin-bottom: 66px;
     padding-bottom: 0;
+  }
+
+  .form__progress .form__name {
+    margin: 0 auto;
   }
 
   .form__progress-wrapper {
