--- a/source/less/blocks/price.less
+++ b/source/less/blocks/price.less
@@ -1,6 +1,7 @@
 .price {
+  position: relative;
   background-color: #f2f2f2;
-  background-image: linear-gradient(to bottom right, #ffffff, #ffffff 24px, #f2f2f2 24px, #f2f2f2);
+  background-image: linear-gradient(to bottom right, #ffffff, #ffffff 50%, #f2f2f2 50%, #f2f2f2);
   background-size: 100% 24px;
   background-repeat: no-repeat;
   margin-bottom: 40px;
@@ -17,7 +18,7 @@
 
 @media (min-width: 660px) {
   .price {
-    background-image: linear-gradient(to bottom right, #ffffff, #ffffff 50px, #f2f2f2 50px, #f2f2f2);
+    background-image: linear-gradient(to bottom right, #ffffff, #ffffff 50%, #f2f2f2 50%, #f2f2f2);
     background-size: 100% 50px;
     padding-bottom: 30px;
     margin-bottom: 44px;
@@ -35,7 +36,7 @@
 @media (min-width: 960px) {
   .price {
     background-color: #f2f2f2;
-    background-image: linear-gradient(to bottom right, #ffffff, #ffffff 70px, #f2f2f2 70px, #f2f2f2);
+    background-image: linear-gradient(to bottom right, #ffffff, #ffffff 50%, #f2f2f2 50%, #f2f2f2);
     background-size: 100% 70px;
     background-repeat: no-repeat;
     padding-top: 145px;
