Добавляет маргины и градиент над картой

--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -9,8 +9,8 @@
     left: 0;
     width: 100%;
     height: 35px;
-    background-image: linear-gradient(to bottom left, #ffffff, #ffffff 35px, transparent 35px, transparent),
-      linear-gradient(to bottom right, #ffffff, #ffffff 35px, transparent 35px, transparent);
+    background-image: linear-gradient(to bottom left, #ffffff, #ffffff 50%, transparent 50%, transparent),
+      linear-gradient(to bottom right, #ffffff, #ffffff 50%, transparent 50%, transparent);
     background-size: 50% 35px, 50% 35px;
     background-repeat: no-repeat, no-repeat;
     background-position: 0 0, 100% 0;
@@ -80,8 +80,6 @@
   .contacts {
     &::after {
       height: 69px;
-      background-image: linear-gradient(to bottom left, #ffffff, #ffffff 69px, transparent 69px, transparent),
-        linear-gradient(to bottom right, #ffffff, #ffffff 69px, transparent 69px, transparent);
       background-size: 50% 69px, 50% 69px;
     }
   }
@@ -114,8 +112,6 @@
   .contacts {
     &::after {
       height: 101px;
-      background-image: linear-gradient(to bottom left, #ffffff, #ffffff 101px, transparent 101px, transparent),
-        linear-gradient(to bottom right, #ffffff, #ffffff 101px, transparent 101px, transparent);
       background-size: 50% 101px, 50% 101px;
     }
   }
