--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -614,7 +614,8 @@
   }
 
   .form__user-contact .form__name {
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .form__user-contact label::after {
@@ -644,7 +645,8 @@
   }
 
   .form__progress .form__name {
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .form__progress-wrapper {
