--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,6 +1,6 @@
 
 @import "normalize.less";
-@import "blocks/mixins.less";
+@import "mixins.less";
 @import "scaffolding.less";
 @import "blocks/container.less";
 @import "blocks/page-header.less";
