--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -14,13 +14,17 @@
   margin-bottom: 35px;
 }
 
-.page-footer__logo:hover[href]:not(:active) path,
-.page-footer__logo:focus[href]:not(:active) path {
+.page-footer__logo svg {
+  fill: #283645;
+}
+
+.page-footer__logo:hover[href]:not(:active) svg,
+.page-footer__logo:focus[href]:not(:active) svg {
   fill: #d22856;
   cursor: pointer;
 }
 
-.page-footer__logo:active[href] path {
+.page-footer__logo:active[href] svg {
   opacity: 0.3;
 }
 
