--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,5 +1,5 @@
 
-@import "normalize.less";
+//@import "normalize.less";
 @import "mixins.less";
 @import "scaffolding.less";
 @import "blocks/container.less";
