--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,5 +1,4 @@
-
-//@import "normalize.less";
+@import "node_modules/normalize.less/normalize.less";
 @import "mixins.less";
 @import "scaffolding.less";
 @import "blocks/container.less";
