--- a/source/less/blocks/post-form.less
+++ b/source/less/blocks/post-form.less
@@ -51,7 +51,7 @@
     position: absolute;
     bottom: 0;
     left: -52px;
-    width: 148%;
+    width: 138%;
     height: 1px;
     background-color: #dddfe0;
   }
@@ -289,6 +289,10 @@
 
   .post-form__block:not(:nth-of-type(1)) {
     padding-top: 25px;
+  }
+
+  .post-form__block:nth-of-type(2) {
+    margin-right: 0;
   }
 
   .post-form__block--fill {
