--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -7,7 +7,7 @@
   align-items: flex-start;
 }
 
-.copyright__paragraf {
+.copyright__paragraph {
   margin: 0;
   padding: 0;
   line-height: 18px;
@@ -47,7 +47,7 @@
     align-items: flex-start;
   }
 
-  .copyright__paragraf {
+  .copyright__paragraph {
     margin: 0;
     padding: 0;
     line-height: 18px;
@@ -88,7 +88,7 @@
     padding-top: 18px;
   }
 
-  .copyright__paragraf {
+  .copyright__paragraph {
     font-size: 18px;
   }
 
