--- a/source/less/blocks/gallery.less
+++ b/source/less/blocks/gallery.less
@@ -20,11 +20,11 @@
   margin-bottom: 20px;
 }
 
-.gallery__foto {
+.gallery__photo {
   display: block;
 }
 
-.gallery__foto img {
+.gallery__photo img {
   display: block;
 }
 
@@ -44,7 +44,7 @@
   align-items: center;
 }
 
-.gallery__autor {
+.gallery__author {
   margin: 0;
   margin-right: 4px;
   font-size: 14px;
@@ -140,7 +140,7 @@
     padding: 0;
   }
 
-  .gallery__foto img {
+  .gallery__photo img {
     width: 100%;
     height: auto;
   }
