--- a/source/less/blocks/histori.less
+++ b/source/less/blocks/histori.less
@@ -1,4 +1,4 @@
-.histori {
+.history {
   width: 320px;
   margin-bottom: 20px;
   padding-top: 45px;
@@ -8,30 +8,30 @@
   text-align: center;
 }
 
-.histori__write {
+.history__write {
   display: none;
 }
 
 @media (min-width: 660px) {
-  .histori {
+  .history {
     width: 560px;
     margin-bottom: 57px;
     padding-top: 92px;
     font-size: 18px;
   }
 
-  .histori__write {
+  .history__write {
     display: block;
   }
 }
 
 @media (min-width: 960px) {
-  .histori {
+  .history {
     width: 820px;
     margin-bottom: 72px;
   }
 
-  .histori__write {
+  .history__write {
     display: inline;
   }
 }
