--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -40,8 +40,6 @@
 
   .main-nav--closed button:active::before {
     opacity: 0.3;
-    //background-color: fade(#d22856, 0.3);
-    //box-shadow: 0 10px 0 0 fade(#d22856, 0.3), 0 20px 0 0 fade(#d22856, 0.3);
   }
 
   .main-nav--opened button {
@@ -92,13 +90,13 @@
   }
 }
 
-.main-nav--closed .main-nav__wrapper {
+.main-nav--closed ul {
   display: none;
 }
 
 @media (min-width: 960px) {
-  .main-nav--closed .main-nav__wrapper {
-    display: block;
+  .main-nav--closed ul {
+    display: flex;
   }
 
   .main-nav__toggle {
@@ -106,10 +104,10 @@
   }
 }
 
-.main-nav--opened .main-nav__wrapper {
+.main-nav--opened ul {
   display: block;
 }
 
-.main-nav--nojs .main-nav__wrapper {
+.main-nav--nojs ul {
   display: block;
 }
