--- a/source/less/blocks/panorama.less
+++ b/source/less/blocks/panorama.less
@@ -19,11 +19,11 @@
   padding-bottom: 12px;
 }
 
-.panorama__foto {
+.panorama__photo {
   display: block;
 }
 
-.panorama__foto img {
+.panorama__photo img {
   display: block;
   width: 100%;
   height: 137px;
@@ -54,7 +54,7 @@
   text-transform: uppercase;
 }
 
-.panorama__autor {
+.panorama__author {
   margin: 0;
   margin-right: 4px;
   font-size: 14px;
@@ -120,7 +120,7 @@
     top: 57px;
   }
 
-  .panorama__foto img {
+  .panorama__photo img {
     height: 509px;
   }
 
@@ -170,7 +170,7 @@
     right: 10px;
   }
 
-  .panorama__foto img {
+  .panorama__photo img {
     height: 506px;
   }
 
