--- a/source/less/blocks/post-form.less
+++ b/source/less/blocks/post-form.less
@@ -33,7 +33,7 @@
   left: 0;
 }
 
-.post-form__setings {
+.post-form__settings {
   position: relative;
   display: flex;
   flex-wrap: wrap;
@@ -227,11 +227,11 @@
     margin-bottom: 0;
   }
 
-  .post-form__setings-wrapper {
+  .post-form__settings-wrapper {
     width: 300px;
   }
 
-  .post-form__setings {
+  .post-form__settings {
     flex-direction: column;
     width: 290px;
     padding-right: 0;
@@ -369,11 +369,11 @@
     margin-right: 86px;
   }
 
-  .post-form__setings-wrapper {
+  .post-form__settings-wrapper {
     width: 412px;
   }
 
-  .post-form__setings {
+  .post-form__settings {
     margin-left: 0;
     margin-bottom: 146px;
     padding-left: 0;
