--- a/source/less/blocks/timer.less
+++ b/source/less/blocks/timer.less
@@ -47,7 +47,7 @@
     padding-left: 310px;
   }
 
-  .timer__paragraf {
+  .timer__paragraph {
     margin: 0;
     margin-bottom: 11px;
     font-weight: normal;
@@ -56,7 +56,7 @@
     padding-left: 310px;
   }
 
-  .timer__desctop {
+  .timer__desktop {
     display: none;
   }
 
@@ -119,7 +119,7 @@
     display: none;
   }
 
-  .timer__paragraf {
+  .timer__paragraph {
     font-size: 18px;
     line-height: 29px;
     margin-bottom: 34px;
@@ -130,7 +130,7 @@
     display: none;
   }
 
-  .timer__desctop {
+  .timer__desktop {
     display: block;
   }
 
