--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -10,7 +10,7 @@
   padding-bottom: 0;
 }
 
-.advantages__paragraf {
+.advantages__paragraph {
   font-family: "Open Sans", "Arial", sans-serif;
   font-weight: 300;
   font-size: 24px;
@@ -89,7 +89,7 @@
     padding-bottom: 8px;
   }
 
-  .advantages__paragraf {
+  .advantages__paragraph {
     font-size: 40px;
     margin-bottom: 2px;
 
@@ -120,7 +120,7 @@
     padding: 0;
   }
 
-  .advantages__paragraf:nth-of-type(2) {
+  .advantages__paragraph:nth-of-type(2) {
     width: 380px;
     margin: 0 auto;
     line-height: 47px;
@@ -152,7 +152,7 @@
     background-image: linear-gradient(175.5deg, #ffffff, #ffffff 379px, #f2f2f2 379px, #f2f2f2);
   }
 
-  .advantages__paragraf {
+  .advantages__paragraph {
     font-size: 50px;
     line-height: 56px;
 
