--- a/source/less/blocks/download.less
+++ b/source/less/blocks/download.less
@@ -35,7 +35,7 @@
   text-align: center;
 }
 
-.download__paragraf {
+.download__paragraph {
   box-sizing: border-box;
   margin-top: 0;
   margin-bottom: 347px;
@@ -84,7 +84,7 @@
     margin-left: 2px;
   }
 
-  .download__paragraf {
+  .download__paragraph {
     background-image: none;
     margin-top: 0;
     margin-bottom: 35px;
@@ -131,7 +131,7 @@
     padding-bottom: 10px;
   }
 
-  .download__paragraf {
+  .download__paragraph {
     width: 296px;
     font-size: 50px;
     line-height: 60px;
