--- a/source/less/style.less
+++ b/source/less/style.less
@@ -23,7 +23,7 @@
 @import "blocks/copyright.less";
 @import "blocks/form-title.less";
 @import "blocks/histori.less";
-@import "blocks/gallery__title.less";
+@import "blocks/gallery-title.less";
 @import "blocks/popup.less";
 @import "blocks/gallery.less";
 @import "blocks/panorama.less";
