--- a/source/less/blocks/download.less
+++ b/source/less/blocks/download.less
@@ -1,6 +1,7 @@
 .download {
   background-color: #1d2631;
   margin-top: -66px;
+  background-color: #2d3d4d;
   background-image: url("../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-position: 50% 1%;
