--- a/source/less/blocks/form-title.less
+++ b/source/less/blocks/form-title.less
@@ -1,5 +1,6 @@
 .form-title {
   margin-top: -70px;
+  background-color: #2d3d4d;
   background-image: url("../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-position: 50% 5px;
