--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -395,6 +395,8 @@
     transform: translateX(0);
     padding-top: 0;
     margin-bottom: 33px;
+    margin-left: auto;
+    margin-right: auto;
     width: 432px;
   }
 
@@ -462,6 +464,8 @@
   .form__user-contact .form__name {
     display: block;
     width: 260px;
+    margin-left: auto;
+    margin-right: auto;
     text-align: center;
     text-transform: uppercase;
     font-weight: normal;
@@ -507,6 +511,8 @@
     width: 368px;
     transform: translateX(0);
     position: static;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .form__app .form__mark {
@@ -549,7 +555,7 @@
     width: 300px;
     margin: 0;
     margin-left: 20px;
-    margin-right: 133px;
+    margin-right: 138px;
   }
 
   .form__required {
