--- a/source/less/blocks/gallery.less
+++ b/source/less/blocks/gallery.less
@@ -69,9 +69,10 @@
   width: 280px;
   line-height: 24px;
   padding: 0 18px;
+  padding-right: 5px;
   padding-bottom: 14px;
   color: #283645;
-  font-weight: 300;
+  font-weight: normal;
 }
 
 .gallery__likes {
