--- a/source/less/blocks/panorama.less
+++ b/source/less/blocks/panorama.less
@@ -35,7 +35,7 @@
   background-color: #f2f2f2;
   padding-top: 18px;
   padding-left: 17px;
-  padding-right: 17px;
+  padding-right: 5px;
 }
 
 .panorama__time {
@@ -69,7 +69,7 @@
   line-height: 24px;
   padding-bottom: 14px;
   color: #283645;
-  font-weight: 300;
+  font-weight: normal;
 }
 
 .panorama__likes {
