--- a/source/less/blocks/popup.less
+++ b/source/less/blocks/popup.less
@@ -2,6 +2,7 @@
   display: none;
   width: 100%;
   background-color: #ffffff;
+  box-shadow: 0px 7px 15px 0px rgba(0, 1, 1, 0.15);
 }
 
 .popup--error {
@@ -51,9 +52,9 @@
 .popup--show {
   display: block;
   position: fixed;
-  top: 50%;
+  top: 50px;
   left: 50%;
-  transform: translate(-50%, 50%);
+  transform: translateX(-50%);
 }
 
 @media (min-width: 660px) {
