--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -18,10 +18,10 @@
   box-shadow: inset 0 1px #485461, 0 -1px #000000;
   min-height: 64px;
   cursor: pointer;
-}
 
-.site-list__item:last-child {
+  &:last-child {
   box-shadow: inset 0 1px #485461, 0 -1px #000000, 0 1px #000000;
+  }
 }
 
 @media (min-width: 960px) {
