--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -35,6 +35,9 @@
 }
 
 .contacts__content {
+  width: 280px;
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 23px;
 
   &:nth-of-type(2) {
