--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -4,15 +4,6 @@
   text-transform: uppercase;
 }
 
-@media (min-width: 960px) {
-  .site-list {
-    display: flex;
-    flex-wrap: wrap;
-    width: 620px;
-    padding-top: 5px;
-  }
-}
-
 .site-list__item {
   box-sizing: border-box;
   box-shadow: inset 0 1px #485461, 0 -1px #000000;
@@ -21,27 +12,6 @@
 
   &:last-child {
   box-shadow: inset 0 1px #485461, 0 -1px #000000, 0 1px #000000;
-  }
-}
-
-@media (min-width: 960px) {
-  .site-list__item {
-    position: relative;
-    margin-right: 82px;
-    box-shadow: none;
-    min-height: 44px;
-
-    &:nth-of-type(4n) {
-      margin-right: 0;
-    }
-
-    &:last-child {
-      box-shadow: none;
-    }
-  }
-
-  .site-list__item__upper {
-    text-transform: uppercase;
   }
 }
 
@@ -68,6 +38,29 @@
 }
 
 @media (min-width: 960px) {
+  .site-list {
+    display: flex;
+    flex-wrap: wrap;
+    width: 620px;
+    padding-top: 5px;
+  }
+
+  .site-list__item {
+    position: relative;
+    margin-right: 82px;
+    box-shadow: none;
+    min-height: 44px;
+
+    &:nth-of-type(4n) {
+      margin-right: 0;
+      padding-left: 2px;
+    }
+
+    &:last-child {
+      box-shadow: none;
+    }
+  }
+
   .site-list__item a {
     font-weight: 300;
     line-height: 18px;
@@ -85,4 +78,30 @@
   .site-list__item--active {
     border-bottom: 2px solid #ffffff;
   }
+
+  .site-list__item__upper {
+    text-transform: uppercase;
+  }
 }
+
+/*.site-list__item a {
+  display: block;
+  padding: 0 10px;
+  padding-top: 15px;
+  padding-bottom: 10px;
+  text-decoration: none;
+  color: #ffffff;
+  font-size: 18px;
+  line-height: 32px;
+  font-weight: bold;
+  vertical-align: middle;
+}
+
+.site-list__item:hover a[href] {
+  color: #d22856;
+}
+
+.site-list__item:active a[href] {
+  color: #d22856;
+  opacity: 0.3;
+}*/
