--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,5 +1,5 @@
 .social {
-  width: 178px;
+  width: 180px;
   .reset_ul();
   margin: 0 auto;
   margin-bottom: 25px;
@@ -49,7 +49,7 @@
 
 @media (min-width: 660px) {
   .social {
-    margin-right: 89px;
+    margin-right: 87px;
   }
 
   .social__item {
@@ -96,6 +96,7 @@
   .social {
     margin-right: 0;
     margin-left: 0;
+    margin-bottom: 0;
     padding-top: 5px;
   }
 }
