--- a/source/less/blocks/popup.less
+++ b/source/less/blocks/popup.less
@@ -2,7 +2,7 @@
   display: none;
   width: 100%;
   background-color: #ffffff;
-  box-shadow: 0px 7px 15px 0px rgba(0, 1, 1, 0.15);
+  box-shadow: 0 7px 15px 0 rgba(0, 1, 1, 0.15);
 }
 
 .popup--error {
